--- a/hello-cdk/Archive/src/css/style.css
+++ b/hello-cdk/Archive/src/css/style.css
@@ -1,7 +1,7 @@
-/* body {
+body {
     background-image: url(https://www.emeraldgrouppublishing.com/sites/default/files/image/covid-cells.jpg);
     background-size: cover;
-} */
+}
 
 #main-head {
     font-size: 4em;
